syntax = "proto3";

option csharp_namespace = "Infotecs.Articles.Server.Application";

package articles;

service Articles {
	rpc ListArticles(EmptyRequest) returns (ListArticlesReply);
	rpc ShowArticle(ShowArticleRequest) returns (ShowArticleReply);
	rpc CreateArticle(CreateArticleRequest) returns (Article);
	rpc DeleteArticle(DeleteArticleRequest) returns (EmptyReply);
	rpc AddComment(AddCommentRequest) returns (Comment);
}

message EmptyRequest {}

message ShowArticleRequest {
	int64 articleId = 1;
}

message CreateArticleRequest {
	string user = 1;
	string title = 2;
	string content = 3;
	bytes thumbnailImage = 4;
}

message DeleteArticleRequest {
	int64 articleId = 2;
}

message AddCommentRequest {
	string user = 1;
	int64 articleId = 2;
	string content = 3;
}

message Article {
	int64 articleId = 1;
	string user = 2;
	string title = 3;
	string content = 4;
	bytes thumbnailImage = 5;
}

message Comment {
	int64 commentId = 1;
	int64 articleId = 2;
	string user = 3;
	string content = 4;
}

message ShowArticleReply {
	Article article = 1;
	repeated Comment comments = 2;
}

message ListArticlesReply {
	repeated Article articles = 1;
}

message EmptyReply {}